2010-10-03  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove unused arguments for unexec.
	The third one is never used, and the last two are always passed as zero.
	* emacs.c (unexec): Add declaration.
	(Fdump_emacs): Only pass the first two arguments to unexec.
	Simplify #ifdef.
	* unexw32.c (unexec):
	* unexsol.c (unexec):
	* unexhp9k800.c (unexec):
	* unexcw.c (unexec): Remove the last 3 arguments, unused.
	* unexelf.c (unexec): Remove the last 3 arguments, unused.
	(find_section): Use const.
	* unexmacosx.c (unexec): Remove the last 3 arguments, unused.
	(unexec_error): Declare it NO_RETURN.
	* unexcoff.c (make_hdr): Assume bss_start is always zero, remove
	it as an argument, remove data_start and entry_address arguments, unused.
	(unexec): Remove bss_start, data_start and
	entry_address arguments.
	* unexaix.c (make_hdr): Assume bss_start is always zero, remove
	it as an argument, remove data_start and entry_address arguments, unused.
	(unexec): Remove bss_start, data_start and
	entry_address arguments.

2010-10-03  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in (TAGS, TAGS-LISP, TAGS-gmake): Add $(FONTOBJ).

	* gnutls.c (emacs_gnutls_handshake, gnutls_make_error)
	(gnutls_emacs_global_init, gnutls_emacs_global_deinit): Make static.
	(Fgnutls_get_initstage, Fgnutls_deinit, Fgnutls_boot, Fgnutls_bye):
	Fix typos in docstrings.
	(Fgnutls_error_fatalp, Fgnutls_error_string): Doc fixes.
	(Fgnutls_errorp): Doc fix; use ERR for the argument name.

2010-10-03  Chong Yidong  <cyd@stupidchicken.com>

	* keyboard.c (command_loop_1): Make sure the mark is really alive
	before using it (Bug#7044).

2010-10-02  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in (tags): Rename target to full-tags.

2010-10-02  Eli Zaretskii  <eliz@gnu.org>

	* emacs.c (main): Remove !WINDOWSNT conditional.
	(Fkill_emacs): Don't mention exemption on MS-Windows.

2010-10-02  Glenn Morris  <rgm@gnu.org>

	* character.c (Fchar_bytes): Remove obsolete function.